--- a/Lab_2_LNGO_Notebook.ipynb
+++ b/Lab_2_LNGO_Notebook.ipynb
@@ -11,29 +11,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center> <font color= #004A94> <font size = 6> Lic. Ingeniería Financiera </font> <br> <br> <font color= #047CFB> <font size = 4>I.F. Lidia Natasha Gamez Ortiz - if709031@iteso.mx </font>\n",
-    "\n"
+    "<center> <font color= #004A94> <font size = 5> Ingeniería Financiera | ITESO </font> <br> <br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><font color= #004A94> <font size = 6> Microestructura y Sistemas de Trading </font> <br> <br>"
+    "<center> <font color= #004A94> <font size = 6> Microestructura y Sistemas de Trading </font> <br> <br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><font color=#42c29b><font size=5> Laboratorio 2: Behavioral Finance para Trading </font> <br> <br>"
+    "<center> <font color=#42c29b><font size=5> Laboratorio 2 <br> <br> Behavioral Finance para Trading </font> <br> <br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center> <font color= #047CFB> <font size = 4> Primavera 2020 </font>  |  <font color= #047CFB> <font size = 4> Repositorio: <a href='https://github.com/NatashaGamez/Lab_2_LNGO'>Link</a></font>"
+    "<center> <font color=#004A94><font size=4> I.F. Lidia Natasha Gamez  | if709031@iteso.mx </font> <br> <br>"
    ]
   },
   {
