--- a/Lab_2_LNGO_Notebook.ipynb
+++ b/Lab_2_LNGO_Notebook.ipynb
@@ -37,6 +37,344 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import funciones as fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Datos\n",
+    "datos = fn.f_leer_archivo(param_archivo='archivo_tradeview_1.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order</th>\n",
+       "      <th>opentime</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>openprice</th>\n",
+       "      <th>s/l</th>\n",
+       "      <th>t/p</th>\n",
+       "      <th>closetime</th>\n",
+       "      <th>closeprice</th>\n",
+       "      <th>commission</th>\n",
+       "      <th>taxes</th>\n",
+       "      <th>swap</th>\n",
+       "      <th>profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24316034</td>\n",
+       "      <td>2019.08.27 06:57:50</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>xauusd</td>\n",
+       "      <td>1529.21000</td>\n",
+       "      <td>1523.000</td>\n",
+       "      <td>1543.0000</td>\n",
+       "      <td>2019.08.27 09:16:01</td>\n",
+       "      <td>1533.69000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>24334215</td>\n",
+       "      <td>2019.08.27 17:06:20</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>eurjpy</td>\n",
+       "      <td>117.66400</td>\n",
+       "      <td>116.950</td>\n",
+       "      <td>118.7000</td>\n",
+       "      <td>2019.08.29 06:38:16</td>\n",
+       "      <td>117.37400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24342155</td>\n",
+       "      <td>2019.08.27 19:25:39</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>eurjpy</td>\n",
+       "      <td>117.34600</td>\n",
+       "      <td>116.950</td>\n",
+       "      <td>119.7000</td>\n",
+       "      <td>2019.08.28 21:01:24</td>\n",
+       "      <td>117.45200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24373260</td>\n",
+       "      <td>2019.08.28 17:11:33</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>eurusd</td>\n",
+       "      <td>1.10791</td>\n",
+       "      <td>1.104</td>\n",
+       "      <td>1.1175</td>\n",
+       "      <td>2019.08.29 06:38:28</td>\n",
+       "      <td>1.10818</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24392415</td>\n",
+       "      <td>2019.08.29 06:35:27</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>gbpusd</td>\n",
+       "      <td>1.22024</td>\n",
+       "      <td>1.208</td>\n",
+       "      <td>1.2370</td>\n",
+       "      <td>2019.08.29 06:37:23</td>\n",
+       "      <td>1.21990</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>25148355</td>\n",
+       "      <td>2019.09.24 20:09:52</td>\n",
+       "      <td>sell</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>xauusd</td>\n",
+       "      <td>1532.02000</td>\n",
+       "      <td>1538.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>2019.09.24 21:18:43</td>\n",
+       "      <td>1525.66000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>25148480</td>\n",
+       "      <td>2019.09.24 20:11:20</td>\n",
+       "      <td>sell</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>xauusd</td>\n",
+       "      <td>1531.50000</td>\n",
+       "      <td>1538.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>2019.09.24 21:18:46</td>\n",
+       "      <td>1525.63000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>25148522</td>\n",
+       "      <td>2019.09.24 20:12:41</td>\n",
+       "      <td>sell</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>xauusd</td>\n",
+       "      <td>1531.86000</td>\n",
+       "      <td>1538.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>2019.09.24 21:18:49</td>\n",
+       "      <td>1525.66000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>25159294</td>\n",
+       "      <td>2019.09.25 01:53:47</td>\n",
+       "      <td>sell</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>xauusd</td>\n",
+       "      <td>1531.06000</td>\n",
+       "      <td>1537.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>2019.09.25 15:24:31</td>\n",
+       "      <td>1527.40000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>25159303</td>\n",
+       "      <td>2019.09.25 01:54:46</td>\n",
+       "      <td>sell</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>xauusd</td>\n",
+       "      <td>1531.28000</td>\n",
+       "      <td>1537.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>2019.09.25 15:24:35</td>\n",
+       "      <td>1527.36000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>84 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       order             opentime  type  size  symbol   openprice       s/l  \\\n",
+       "0   24316034  2019.08.27 06:57:50   buy  0.04  xauusd  1529.21000  1523.000   \n",
+       "1   24334215  2019.08.27 17:06:20   buy  0.01  eurjpy   117.66400   116.950   \n",
+       "2   24342155  2019.08.27 19:25:39   buy  0.05  eurjpy   117.34600   116.950   \n",
+       "3   24373260  2019.08.28 17:11:33   buy  0.01  eurusd     1.10791     1.104   \n",
+       "4   24392415  2019.08.29 06:35:27   buy  0.01  gbpusd     1.22024     1.208   \n",
+       "..       ...                  ...   ...   ...     ...         ...       ...   \n",
+       "79  25148355  2019.09.24 20:09:52  sell  0.06  xauusd  1532.02000  1538.000   \n",
+       "80  25148480  2019.09.24 20:11:20  sell  0.02  xauusd  1531.50000  1538.000   \n",
+       "81  25148522  2019.09.24 20:12:41  sell  0.01  xauusd  1531.86000  1538.000   \n",
+       "82  25159294  2019.09.25 01:53:47  sell  0.06  xauusd  1531.06000  1537.000   \n",
+       "83  25159303  2019.09.25 01:54:46  sell  0.01  xauusd  1531.28000  1537.000   \n",
+       "\n",
+       "          t/p            closetime  closeprice  commission  taxes  swap  \\\n",
+       "0   1543.0000  2019.08.27 09:16:01  1533.69000         0.0      0     0   \n",
+       "1    118.7000  2019.08.29 06:38:16   117.37400         0.0      0     0   \n",
+       "2    119.7000  2019.08.28 21:01:24   117.45200         0.0      0     0   \n",
+       "3      1.1175  2019.08.29 06:38:28     1.10818         0.0      0     0   \n",
+       "4      1.2370  2019.08.29 06:37:23     1.21990         0.0      0     0   \n",
+       "..        ...                  ...         ...         ...    ...   ...   \n",
+       "79     0.0000  2019.09.24 21:18:43  1525.66000         0.0      0     0   \n",
+       "80     0.0000  2019.09.24 21:18:46  1525.63000         0.0      0     0   \n",
+       "81     0.0000  2019.09.24 21:18:49  1525.66000         0.0      0     0   \n",
+       "82     0.0000  2019.09.25 15:24:31  1527.40000         0.0      0     0   \n",
+       "83     0.0000  2019.09.25 15:24:35  1527.36000         0.0      0     0   \n",
+       "\n",
+       "    profit  \n",
+       "0    17.92  \n",
+       "1    -2.73  \n",
+       "2     5.00  \n",
+       "3     0.27  \n",
+       "4    -0.34  \n",
+       "..     ...  \n",
+       "79   38.16  \n",
+       "80   11.74  \n",
+       "81    6.20  \n",
+       "82   21.96  \n",
+       "83    3.92  \n",
+       "\n",
+       "[84 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'lower'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-9e359b9b53e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Transformaciones Pips\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdatos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf_columnas_pips\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdatos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/Trading/Lab_2_LNGO/funciones.py\u001b[0m in \u001b[0;36mf_columnas_pips\u001b[0;34m(param_data)\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m     \"\"\"\n\u001b[0;32m--> 108\u001b[0;31m     \u001b[0mparam_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pips'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparam_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'closeprice'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mf_pip_size\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_ins\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparam_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'symbol'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    109\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mparam_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pips'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Trading/Lab_2_LNGO/funciones.py\u001b[0m in \u001b[0;36mf_pip_size\u001b[0;34m(param_ins)\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;31m# transformar a minusculas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m     \u001b[0minst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0;31m# lista de pips por instrumento\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5177\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5178\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5179\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5181\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'lower'"
+     ]
+    }
+   ],
+   "source": [
+    "#Transformaciones Pips\n",
+    "datos = fn.f_columnas_pips(param_data=datos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
