--- a/Lab_2_LNGO_Notebook.ipynb
+++ b/Lab_2_LNGO_Notebook.ipynb
@@ -1069,7 +1069,7 @@
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  + df_profit['Profit_acm_d'][a]\n"
+      "  + df_profit['Profit_acm_d'][a]-5000\n"
      ]
     },
     {
@@ -1105,126 +1105,126 @@
        "      <td>2019-08-27</td>\n",
        "      <td>13</td>\n",
        "      <td>19.90</td>\n",
-       "      <td>19.90</td>\n",
+       "      <td>5019.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2019-08-28</td>\n",
        "      <td>2</td>\n",
        "      <td>-25.37</td>\n",
-       "      <td>-5.47</td>\n",
+       "      <td>4994.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2019-08-29</td>\n",
        "      <td>7</td>\n",
        "      <td>-18.81</td>\n",
-       "      <td>-24.28</td>\n",
+       "      <td>4975.72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2019-08-30</td>\n",
        "      <td>3</td>\n",
        "      <td>38.21</td>\n",
-       "      <td>13.93</td>\n",
+       "      <td>5013.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2019-09-02</td>\n",
        "      <td>5</td>\n",
        "      <td>-77.64</td>\n",
-       "      <td>-63.71</td>\n",
+       "      <td>4936.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2019-09-03</td>\n",
        "      <td>7</td>\n",
        "      <td>-94.16</td>\n",
-       "      <td>-157.87</td>\n",
+       "      <td>4842.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2019-09-04</td>\n",
        "      <td>1</td>\n",
        "      <td>29.11</td>\n",
-       "      <td>-128.76</td>\n",
+       "      <td>4871.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2019-09-05</td>\n",
        "      <td>3</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>-128.51</td>\n",
+       "      <td>4871.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2019-09-06</td>\n",
        "      <td>5</td>\n",
        "      <td>7.02</td>\n",
-       "      <td>-121.49</td>\n",
+       "      <td>4878.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2019-09-11</td>\n",
        "      <td>7</td>\n",
        "      <td>14.85</td>\n",
-       "      <td>-106.64</td>\n",
+       "      <td>4893.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>2019-09-12</td>\n",
        "      <td>1</td>\n",
        "      <td>21.78</td>\n",
-       "      <td>-84.86</td>\n",
+       "      <td>4915.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>2019-09-13</td>\n",
        "      <td>5</td>\n",
        "      <td>153.28</td>\n",
-       "      <td>68.42</td>\n",
+       "      <td>5068.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>2019-09-16</td>\n",
        "      <td>4</td>\n",
        "      <td>61.08</td>\n",
-       "      <td>129.50</td>\n",
+       "      <td>5129.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>2019-09-17</td>\n",
        "      <td>3</td>\n",
        "      <td>10.98</td>\n",
-       "      <td>140.48</td>\n",
+       "      <td>5140.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>2019-09-19</td>\n",
        "      <td>5</td>\n",
        "      <td>47.31</td>\n",
-       "      <td>187.79</td>\n",
+       "      <td>5187.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>2019-09-24</td>\n",
        "      <td>7</td>\n",
        "      <td>50.29</td>\n",
-       "      <td>238.08</td>\n",
+       "      <td>5238.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>2019-09-25</td>\n",
        "      <td>5</td>\n",
        "      <td>9.21</td>\n",
-       "      <td>247.29</td>\n",
+       "      <td>5247.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>2019-09-26</td>\n",
        "      <td>1</td>\n",
        "      <td>6.84</td>\n",
-       "      <td>254.13</td>\n",
+       "      <td>5254.13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1232,24 +1232,24 @@
       ],
       "text/plain": [
        "     Timestamp  mov por día  Profit_d  Profit_acm_d\n",
-       "0   2019-08-27           13     19.90         19.90\n",
-       "1   2019-08-28            2    -25.37         -5.47\n",
-       "2   2019-08-29            7    -18.81        -24.28\n",
-       "3   2019-08-30            3     38.21         13.93\n",
-       "4   2019-09-02            5    -77.64        -63.71\n",
-       "5   2019-09-03            7    -94.16       -157.87\n",
-       "6   2019-09-04            1     29.11       -128.76\n",
-       "7   2019-09-05            3      0.25       -128.51\n",
-       "8   2019-09-06            5      7.02       -121.49\n",
-       "9   2019-09-11            7     14.85       -106.64\n",
-       "10  2019-09-12            1     21.78        -84.86\n",
-       "11  2019-09-13            5    153.28         68.42\n",
-       "12  2019-09-16            4     61.08        129.50\n",
-       "13  2019-09-17            3     10.98        140.48\n",
-       "14  2019-09-19            5     47.31        187.79\n",
-       "15  2019-09-24            7     50.29        238.08\n",
-       "16  2019-09-25            5      9.21        247.29\n",
-       "17  2019-09-26            1      6.84        254.13"
+       "0   2019-08-27           13     19.90       5019.90\n",
+       "1   2019-08-28            2    -25.37       4994.53\n",
+       "2   2019-08-29            7    -18.81       4975.72\n",
+       "3   2019-08-30            3     38.21       5013.93\n",
+       "4   2019-09-02            5    -77.64       4936.29\n",
+       "5   2019-09-03            7    -94.16       4842.13\n",
+       "6   2019-09-04            1     29.11       4871.24\n",
+       "7   2019-09-05            3      0.25       4871.49\n",
+       "8   2019-09-06            5      7.02       4878.51\n",
+       "9   2019-09-11            7     14.85       4893.36\n",
+       "10  2019-09-12            1     21.78       4915.14\n",
+       "11  2019-09-13            5    153.28       5068.42\n",
+       "12  2019-09-16            4     61.08       5129.50\n",
+       "13  2019-09-17            3     10.98       5140.48\n",
+       "14  2019-09-19            5     47.31       5187.79\n",
+       "15  2019-09-24            7     50.29       5238.08\n",
+       "16  2019-09-25            5      9.21       5247.29\n",
+       "17  2019-09-26            1      6.84       5254.13"
       ]
      },
      "execution_count": 7,
