--- a/Lab_2_LNGO_Notebook.ipynb
+++ b/Lab_2_LNGO_Notebook.ipynb
@@ -44,7 +44,8 @@
     "import funciones as fn\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import math"
+    "import datetime\n",
+    "import random"
    ]
   },
   {
@@ -74,32 +75,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:118: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:119: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  * f_pip_size(param_ins=param_data.iloc[i, 4])\n",
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:124: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:125: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  param_data['pips_acm'][i] = param_data.iloc[i, 15]\n",
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:129: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:130: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  param_data['profit_acm'][i] = param_data.iloc[i, 13]\n",
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:126: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:127: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  param_data['pips_acm'][i] = param_data.iloc[i - 1, 16] + param_data.iloc[i, 15]\n",
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:131: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:132: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  param_data['profit_acm'][i] = param_data.iloc[i - 1, 17] + param_data.iloc[i, 13]\n",
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:121: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:122: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -447,7 +448,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:215: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:216: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1055,18 +1056,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:250: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:251: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Profit['Timestamp'] = [param_data.iloc[i, 1].date() for i in range(param_data.shape[0])]\n",
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:286: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:318: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_profit['Profit_acm_d'][a] = df_profit['Profit_acm_d'][a]\n",
-      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:289: SettingWithCopyWarning: \n",
+      "/Users/natasha/Documents/Trading/Lab_2_LNGO/funciones.py:321: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1103,126 +1104,126 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2019-08-27</td>\n",
+       "      <td>2019/08/27</td>\n",
        "      <td>13</td>\n",
        "      <td>19.90</td>\n",
        "      <td>5019.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2019-08-28</td>\n",
+       "      <td>2019/08/28</td>\n",
        "      <td>2</td>\n",
        "      <td>-25.37</td>\n",
        "      <td>4994.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2019-08-29</td>\n",
+       "      <td>2019/08/29</td>\n",
        "      <td>7</td>\n",
        "      <td>-18.81</td>\n",
        "      <td>4975.72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2019-08-30</td>\n",
+       "      <td>2019/08/30</td>\n",
        "      <td>3</td>\n",
        "      <td>38.21</td>\n",
        "      <td>5013.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2019-09-02</td>\n",
+       "      <td>2019/09/02</td>\n",
        "      <td>5</td>\n",
        "      <td>-77.64</td>\n",
        "      <td>4936.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2019-09-03</td>\n",
+       "      <td>2019/09/03</td>\n",
        "      <td>7</td>\n",
        "      <td>-94.16</td>\n",
        "      <td>4842.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2019-09-04</td>\n",
+       "      <td>2019/09/04</td>\n",
        "      <td>1</td>\n",
        "      <td>29.11</td>\n",
        "      <td>4871.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2019-09-05</td>\n",
+       "      <td>2019/09/05</td>\n",
        "      <td>3</td>\n",
        "      <td>0.25</td>\n",
        "      <td>4871.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2019-09-06</td>\n",
+       "      <td>2019/09/06</td>\n",
        "      <td>5</td>\n",
        "      <td>7.02</td>\n",
        "      <td>4878.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2019-09-11</td>\n",
+       "      <td>2019/09/11</td>\n",
        "      <td>7</td>\n",
        "      <td>14.85</td>\n",
        "      <td>4893.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2019-09-12</td>\n",
+       "      <td>2019/09/12</td>\n",
        "      <td>1</td>\n",
        "      <td>21.78</td>\n",
        "      <td>4915.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2019-09-13</td>\n",
+       "      <td>2019/09/13</td>\n",
        "      <td>5</td>\n",
        "      <td>153.28</td>\n",
        "      <td>5068.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2019-09-16</td>\n",
+       "      <td>2019/09/16</td>\n",
        "      <td>4</td>\n",
        "      <td>61.08</td>\n",
        "      <td>5129.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2019-09-17</td>\n",
+       "      <td>2019/09/17</td>\n",
        "      <td>3</td>\n",
        "      <td>10.98</td>\n",
        "      <td>5140.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2019-09-19</td>\n",
+       "      <td>2019/09/19</td>\n",
        "      <td>5</td>\n",
        "      <td>47.31</td>\n",
        "      <td>5187.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2019-09-24</td>\n",
+       "      <td>2019/09/24</td>\n",
        "      <td>7</td>\n",
        "      <td>50.29</td>\n",
        "      <td>5238.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>2019-09-25</td>\n",
+       "      <td>2019/09/25</td>\n",
        "      <td>5</td>\n",
        "      <td>9.21</td>\n",
        "      <td>5247.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>2019-09-26</td>\n",
+       "      <td>2019/09/26</td>\n",
        "      <td>1</td>\n",
        "      <td>6.84</td>\n",
        "      <td>5254.13</td>\n",
@@ -1233,24 +1234,24 @@
       ],
       "text/plain": [
        "     Timestamp  mov por día  Profit_d  Profit_acm_d\n",
-       "0   2019-08-27           13     19.90       5019.90\n",
-       "1   2019-08-28            2    -25.37       4994.53\n",
-       "2   2019-08-29            7    -18.81       4975.72\n",
-       "3   2019-08-30            3     38.21       5013.93\n",
-       "4   2019-09-02            5    -77.64       4936.29\n",
-       "5   2019-09-03            7    -94.16       4842.13\n",
-       "6   2019-09-04            1     29.11       4871.24\n",
-       "7   2019-09-05            3      0.25       4871.49\n",
-       "8   2019-09-06            5      7.02       4878.51\n",
-       "9   2019-09-11            7     14.85       4893.36\n",
-       "10  2019-09-12            1     21.78       4915.14\n",
-       "11  2019-09-13            5    153.28       5068.42\n",
-       "12  2019-09-16            4     61.08       5129.50\n",
-       "13  2019-09-17            3     10.98       5140.48\n",
-       "14  2019-09-19            5     47.31       5187.79\n",
-       "15  2019-09-24            7     50.29       5238.08\n",
-       "16  2019-09-25            5      9.21       5247.29\n",
-       "17  2019-09-26            1      6.84       5254.13"
+       "0   2019/08/27           13     19.90       5019.90\n",
+       "1   2019/08/28            2    -25.37       4994.53\n",
+       "2   2019/08/29            7    -18.81       4975.72\n",
+       "3   2019/08/30            3     38.21       5013.93\n",
+       "4   2019/09/02            5    -77.64       4936.29\n",
+       "5   2019/09/03            7    -94.16       4842.13\n",
+       "6   2019/09/04            1     29.11       4871.24\n",
+       "7   2019/09/05            3      0.25       4871.49\n",
+       "8   2019/09/06            5      7.02       4878.51\n",
+       "9   2019/09/11            7     14.85       4893.36\n",
+       "10  2019/09/12            1     21.78       4915.14\n",
+       "11  2019/09/13            5    153.28       5068.42\n",
+       "12  2019/09/16            4     61.08       5129.50\n",
+       "13  2019/09/17            3     10.98       5140.48\n",
+       "14  2019/09/19            5     47.31       5187.79\n",
+       "15  2019/09/24            7     50.29       5238.08\n",
+       "16  2019/09/25            5      9.21       5247.29\n",
+       "17  2019/09/26            1      6.84       5254.13"
       ]
      },
      "execution_count": 7,
@@ -1281,66 +1282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Metrica</th>\n",
-       "      <th>Valor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Sharpe</td>\n",
-       "      <td>-7.255656</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Sortino_C</td>\n",
-       "      <td>0.192042</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sortino_V</td>\n",
-       "      <td>0.224413</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Metrica     Valor\n",
-       "0     Sharpe -7.255656\n",
-       "1  Sortino_C  0.192042\n",
-       "2  Sortino_V  0.224413"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_mad =fn.f_estadisticas_mad(param_data=df_profit_d)\n",
     "df_mad"
